tests/characterization/snapshots/characterization__backend__backend_device_status_active.snap
---
source: tests/characterization/backend.rs
expression: context.render_output(&active)
---
exit: 0
--- stdout ---
active
--- stderr ---
--- end ---
