tests/characterization/snapshots/characterization__backend__backend_device_status_show.snap
---
source: tests/characterization/backend.rs
expression: context.render_output(&show)
---
exit: 0
--- stdout ---
inactive
--- stderr ---
--- end ---
