tests/characterization/snapshots/characterization__backend__backend_device_status_unknown_action.snap
---
source: tests/characterization/backend.rs
expression: "context.render_output(&context.run_snapshot_subject([\"backend\",\n\"device-status\", \"unknown\"]))"
---
exit: 1
--- stdout ---
Usage:
  oqtopus backend device-status <show|active|inactive|maintenance>
--- stderr ---
--- end ---
