tests/characterization/snapshots/characterization__backend__backend_info.snap
---
source: tests/characterization/backend.rs
expression: context.render_output(&output)
---
exit: 0
--- stdout ---
template=backend
install_root=<TEST_ROOT>/xdg-data/oqtopus/backend/releases
environment_name=characterization
environment_root=<TEST_ROOT>/work
created_at=2000-01-02T03:04:05Z
engine_version=v1.2.3
--- stderr ---
--- end ---
