tests/characterization/snapshots/characterization__backend__backend_info_extra_argument.snap
---
source: tests/characterization/backend.rs
expression: context.render_output(&output)
---
exit: 1
--- stdout ---
--- stderr ---
Error: oqtopus backend info does not accept arguments.
--- end ---
