tests/characterization/snapshots/characterization__backend__backend_info_mismatched_root.snap
---
source: tests/characterization/backend.rs
expression: "context.render_output(&context.run_snapshot_subject([\"backend\", \"info\"]))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: Current directory does not match environment_root.
environment_root = <TEST_ROOT>/elsewhere
current          = <TEST_ROOT>/work
--- end ---
