tests/characterization/snapshots/characterization__backend__backend_info_missing_install_root.snap
---
source: tests/characterization/backend.rs
expression: "missing_install_root.render_output(&missing_install_root.run_snapshot_subject([\"backend\",\n\"info\"]))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: invalid .metadata: missing install_root.
--- end ---
