tests/characterization/snapshots/characterization__backend__backend_info_no_metadata.snap
---
source: tests/characterization/backend.rs
expression: "no_metadata.render_output(&no_metadata.run_snapshot_subject([\"backend\",\n\"info\"]))"
---
exit: 1
--- stdout ---
--- stderr ---
Error: .metadata not found.
This directory is not an OQTOPUS backend environment.
--- end ---
